Use isExternal flag in showDocument LSP callbacks